# sqlx-tester

./: .pre-commit-config.yaml  Cargo.toml  README.md
migrations/: 20221214065751_todo.sql
src/: postgres.rs
