[package]
name = "sqlx-tester"
version = "0.1.0"
authors = ["jiahong dong"]
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/"
repository = "https://github.com/dongjiahong/sqlx-tester"
homepage = "https://github.com/dongjiahong/sqlx-tester"
description = "learn rust from the tyrchen"
readme = "README.md"
categories = ["development-tools"]
keywords = ["test","database","sqlx"]

[dependencies]
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.23.0", features = ["macros", "rt", "rt-multi-thread"] }
uuid = { version = "1.2.2", features = ["v4"] }
